# wasm-central

./: .gitignore  Cargo.toml  Dockerfile.managed  Dockerfile.native  Makefile  README.md  build.rs  install_wasi_sdk.sh  pom.xml  rt.sh
cli/: .gitignore  README.md  pom.xml
cli/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
cli/src/main/java/wasm/: CliCommand.java  FunctionCommand.java  GreetingCommand.java  HelloGrpcService.java
cli/src/main/java/wasm/args/: FunctionCommand.java  RootCommand.java
cli/src/main/java/wasm/args/fn/: DeployCommand.java  InvokeCommand.java  ListCommand.java
cli/src/test/java/wasm/: HelloGrpcServiceTest.java
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: compiler.rs  main.rs  options.rs
crates/compiler/: Cargo.toml
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: main.rs
crates/daemon/tests/: modules_tests.rs
crates/mediator/: Cargo.toml  build.rs
crates/mediator/src/: main.rs  subscription.rs  typing.rs
crates/runner/: Cargo.toml
crates/runner/src/: data.rs  functions.rs  lib.rs  modules.rs  runner.rs  watcher.rs
crates/runner/tests/: modules_tests.rs  runner_tests.rs
crates/schema/: Cargo.toml  build.rs
crates/schema/src/: lib.rs
crates/wrapper/: Cargo.toml
crates/wrapper/src/: lib.rs  main.rs
examples/: transformer.js
mediator/: pom.xml
mediator/src/main/java/wasm/: Configuration.java
mediator/src/main/java/wasm_central/: GrpcConfiguration.java  WasmMediator.java
mediator/src/main/java/wasm_central/conf/: FnHostRemote.java
mediator/src/main/java/wasm_central/grpc/: SubscriberImpl.java
proto/: admin.proto  cli.proto  data-tx.proto  fn.proto  ipc.proto  mgmt.proto  modules.proto  schema.proto
src/: data.rs  lib.rs  modules.rs  runner.rs
tests/: modules_tests.rs  runner_tests.rs
