[package]
name = "wasm-central-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-central-runner = { version = "0.1.0", path = "../runner" }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.7"
