[package]
name = "wasm-central-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-central-wrapper = { version = "0.1.0", path = "../wrapper" }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.0", features = ["derive"] }
wizer = "1.4.0"

[build-dependencies]
tonic-build = "0.7"
