[package]
name = "wasm-central-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.0", features = ["derive"] }
wasi-cap-std-sync = "0.34.1"
wasi-common = "0.34.2"
anyhow = "1.0.58"
nc = "0.8.4"
wizer = { git = "https://github.com/escandasoft/wizer.git" }

[build-dependencies]
tonic-build = "0.7"
