[package]
name = "wasm-central-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.0", features = ["derive"] }
console = "0.15.0"

[build-dependencies]
tonic-build = "0.7"