[package]
name = "wasm-central-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-central-runner = { version = "0.1.0", path = "../runner" }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.0", features = ["derive"] }
console = "0.15.0"
zip = "0.6.2"
iter_tools = "0.1.3"

[build-dependencies]
tonic-build = "0.7"