[package]
name = "wasm-central-mediator"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-central-schema = { path = "../schema", version = "0.1.0" }
tonic = "0.7"
prost = "0.10"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
clap = { version = "3.0", features = ["derive"] }
kafka = "0.9"

[build-dependencies]
tonic-build = "0.7"
