[package]
name = "wasm-central-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.2"
sha2 = "0.10.2"
anyhow = "1.0.58"
memfile = "0.2.1"
wasi-cap-std-sync = "0.34.1"
wasi-common = "0.34.1"
wasmtime = "0.34.1"
wasmtime-wasi = "0.34.1"
fork = "0.1.19"
nc = "0.8.4"
libc = "0.2.126"
strum_macros = "0.24.0"
thiserror = "1.0.31"